--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Project in Action - [Jobify](https://www.jobify.live/)",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server --ignore client",
+    "client": "npm run dev --prefix client"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,16 @@
   },
   "homepage": "https://github.com/Sujeet0101/Jobify-MERN#readme",
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "validator": "^13.15.15"
   }
