--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "morgan": "^1.10.1",
+    "react-icons": "^5.5.0",
     "validator": "^13.15.15"
   }
 }
