--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-rate-limiter": "^1.3.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "react-icons": "^5.5.0",
